--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.google.gms:google-services:4.3.14'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +18,11 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
         jcenter()
-        
     }
 }
 
